# nbtgTimer

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: toolchain.cmake
drv/ssd1306/: CMakeLists.txt  README.md
drv/ssd1306/inc/: ssd1306.h
drv/ssd1306/src/: ssd1306.c
nbtgTimer/: CMakeLists.txt
nbtgTimer/inc/: display.h  faults.h  fstop.h  images.h
nbtgTimer/inc/display/: fonts.h
nbtgTimer/src/: display.c  faults.c  fstop.c  main.c
scripts/: size_mcu.sh
sys/: CMakeLists.txt  startup_g070xx.s
sys/FreeRTOS-Kernel/portable/: CMakeLists.txt
sys/FreeRTOSConfig/: CMakeLists.txt  FreeRTOSConfig.h
sys/bsp/: CMakeLists.txt
sys/bsp/inc/: board.h  gpio.h  i2c.h  i2c.h_  spi.h  timer.h  uart.h
sys/bsp/src/: board.c  gpio.c  i2c.c  spi.c  timer.c  uart.c
sys/stm32g0xx_hal_driver/: CMakeLists.txt
sys/stm32g0xx_sys/: nbtgTimer.ld  stm32g0xx_hal_conf.h
sys/stm32g0xx_sys/CMSIS/Device/: system_stm32g0xx.c
